--- a/NextBus10/AndroidManifest.xml
+++ b/NextBus10/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="pacote.NextBus10.Act_tempoChegada"
+            android:label="@string/title_activity_act_tempo_chegada" >
+        </activity>
     </application>
 
 </manifest>
