--- a/NextBus10/AndroidManifest.xml
+++ b/NextBus10/AndroidManifest.xml
@@ -13,18 +13,23 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar" >
+        <activity android:name="pacote.NextBus10.MainActivity" >
+        </activity>
         <activity
-            android:name="pacote.NextBus10.MainActivity"
-            android:label="@string/app_name" >
+            android:name="pacote.NextBus10.Act_Principal"
+            android:label="@string/title_activity_act_tempo_chegada" >
+        </activity>
+        <activity
+            android:name="pacote.NextBus10.Act_SScreen"
+            android:label="@string/title_activity_act__sscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="pacote.NextBus10.Act_tempoChegada"
-            android:label="@string/title_activity_act_tempo_chegada" >
+            android:name="pacote.NextBus10.TempoChegada2"
+            android:label="@string/title_activity_tempo_chegada2" >
         </activity>
     </application>
 
