--- a/NextBus10/AndroidManifest.xml
+++ b/NextBus10/AndroidManifest.xml
@@ -3,11 +3,16 @@
     package="pacote.NextBus10"
     android:versionCode="1"
     android:versionName="1.0" >
-
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+    
+	<uses-permission android:name="android.permission.INTERNET"/>
+	
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>  
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission> 
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
